--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@ project(Graph)
 
 set(CMAKE_CXX_STANDARD 17)
 
-set(SOURCE_FILES library.cpp library.h)
+set(SOURCE_FILES library.cpp library.h source/IGraph.h source/CEdge.h source/CVertex.h source/CGraph.h source/IAlgo.h source/ITopologies.h source/IValueGenerators.h source/IGraphUtil.h)
 add_library(Graph ${SOURCE_FILES})
 
 add_executable(TestExe main.cpp)
